--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Muhammad Tahir Ashraf, Ph.D. # your site title
 author: Muhammad Tahir Ashraf, Ph.D. # You :P
 description: > # Meta description of Homepage
-  Notes on broad topics including Process Engineering, Chemical Engineering, Biorefinery, Renewable Energy, Data Analysis, and Data Science. 
-  # Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+  Notes on use open source modeling tools for process engineering and data science.
+
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://tahircpe.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -22,6 +22,7 @@ social:
 navigation: # Navigation links
   - {name: 'Blog', link: '/'}
   - {name: 'About', link: '/about'}
+  - {name: 'Categories', link: '/categories'}
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
@@ -34,14 +35,18 @@ email: tahircpe@gmail.com # email for form submission
 
 twitter_username: tahircpe # replace with your_twitter_username or comment to remove link from footer
 
-github_username:  tahircpe # replace with your_github_username or comment to remove link from footer
+github_username: tahircpe # replace with your_github_username or comment to remove link from footer
+
+linkedin_username: tahircpe
 
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
   shortname: tahircpe # to enable comments replace with your_disqus_shortname
 
-# google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+google_tag_manager: GTM-M64XDJX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+
+google_analytics: UA-121670121-1
 
 service_worker: true
 
