--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ linkedin_username: tahircpe
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
-  shortname: tahircpe # to enable comments replace with your_disqus_shortname
+  shortname: tahircpe-github-io # to enable comments replace with your_disqus_shortname
 
 google_tag_manager: GTM-M64XDJX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
@@ -76,3 +76,4 @@ compress_html:
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-gist
